--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@500;700&family=Space+Mono:wght@400;700&display=swap"
     rel="stylesheet">
-  <link href="/style.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
   <title>404 | Page Not Found</title>
 </head>
 
@@ -25,7 +25,7 @@
     <p>404 NOT FOUND</p>
   </header>
   <div class="content">
-    <img src="/Scarecrow.png" alt="Image of a scarecrow" width="286px" height="238px" aria-hidden="true"/>
+    <img src="Scarecrow.png" alt="Image of a scarecrow" width="286px" height="238px" aria-hidden="true"/>
     <main>
       <h1>I have bad news for you</h1>
       <p>The page you are looking for might be removed or is temporarily unavailable</p>
